# CardGame

./: .gitignore  CMakeLists.txt
CardGame/: BasicQuiz.cpp  BasicQuiz.h  CMakeLists.txt  Card.h  Game.cpp  Game.h  Main.cpp  Quiz.cpp  Quiz.h  QuizApp.cpp  QuizApp.h  QuizType.h  UserInterface.cpp  UserInterface.h  imgui_impl_opengl3.cpp
includes/: CardTypes.h  FilesHandler.h  Shuffles.h
